--- a/action.yml
+++ b/action.yml
@@ -5,5 +5,5 @@ branding:
   color: blue
   icon: package
 runs:
-  using: 'powershell'
-  main: 'main.ps1'
+  using: 'docker'
+  image: 'Dockerfile'
